<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E3E2E2"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:id="@+id/exTitle"
                style="@style/CryptographerTitles"
                android:text="@string/exercise"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/exConfigureBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_settings_dark"
                android:drawablePadding="10dp"
                android:gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/configure_exercise" />


            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/exerciseExpand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:clickable="false"
                app:el_duration="500"
                app:el_expanded="false">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical">


                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipgroupCiphers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill"
                        android:layout_marginTop="5dp"
                        app:singleLine="false">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipCaeser"
                            style="@style/ChipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/caeser"
                            app:checkedIcon="@drawable/ic_check"
                            app:closeIconVisible="false" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipVigenere"
                            style="@style/ChipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="1dp"
                            android:checked="true"
                            android:text="@string/vigenere" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipAffine"
                            style="@style/ChipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="1dp"
                            android:checked="true"
                            android:text="@string/affine" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipPlayfair"
                            style="@style/ChipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="1dp"
                            android:checked="true"
                            android:text="@string/playfair" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipOrtho"
                            style="@style/ChipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="1dp"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/ortho" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipDiagonal"
                            style="@style/ChipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/diagonal" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipOrthoReverse"
                            style="@style/ChipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="1dp"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/reverse" />

                    </com.google.android.material.chip.ChipGroup>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipSentences"
                        style="@style/ChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="1dp"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/include_sentences" />

                    <View
                        android:id="@+id/divider9"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/darker_gray" />

                </LinearLayout>

            </net.cachapa.expandablelayout.ExpandableLayout>


            <TextView
                android:id="@+id/exerciseBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="#FFFFFF"
                android:padding="10sp"
                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
                android:textSize="15sp" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/exCipherLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/cipher_colon"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/exerciseCipher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:textSize="15sp" />
            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@android:color/darker_gray" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/exercisePtLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/plain_text_colon"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/exercisePt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="15sp" />

            </LinearLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtKeyLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/key_colon"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/exerciseKey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="15sp" />

            </LinearLayout>

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtCipherTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/cipher_text_colon"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/exerciseCt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:textSize="15sp" />

            </LinearLayout>

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@android:color/darker_gray" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/exerciseAnswerLayout"
                style="@style/CryptographerEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/answer"
                app:errorTextAppearance="@style/TextInputLayoutError"
                app:helperTextEnabled="true"
                app:hintTextAppearance="@style/Hint2">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/exerciseAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_error_accent"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textNoSuggestions"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:src="@drawable/ic_heart" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:paddingBottom="15dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/exerciseSeeAnswerBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/generate_answer" />

                    <Button
                        android:id="@+id/exerciseNextBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/new_exercise" />
                </LinearLayout>
            </FrameLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#E3E2E2" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>